--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    "Olá Mundo! Esse é meu primeiro site!"
+    "Olá Mundo! Esse é meu primeiro site!"<br>
     <img src="pessoas.jpg" alt="" width="360px">
 </body>
 </html>
