UPDATE index.html BOAS VINDAS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>"Olá Mundo! Esse é meu primeiro site."</p>
+    <p>"Olá Mundo Novo! Esse é meu primeiro site."</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eaque, earum quidem in quibusdam harum molestias dolor, beatae laudantium recusandae, corporis a cum voluptatem sunt aut explicabo vitae iure aspernatur? Accusantium, quae, totam itaque autem eveniet sequi illo eius reiciendis natus aliquam quibusdam similique distinctio quaerat assumenda corrupti quo. Aperiam!</p>
     <img src="pessoas.jpg" alt="" width="360px">
